<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <include layout="@layout/mytoolbar"/>


    <EditText
        android:id="@+id/myUserLog"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border_edittext"
        android:drawableEnd="@drawable/ic_person_black_24dp"
        android:ems="10"
        android:hint="Username"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logpwd"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        app:passwordToggleDrawable="@drawable/icon"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000">

        <EditText
            android:id="@+id/logpwdfirst"
            android:layout_height="40dp"
            android:layout_width="340dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#3897F0"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="______________OR______________"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/fblog"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:cursorVisible="false"
        android:drawableLeft="@drawable/ic_facebook_blue"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingHorizontal="70dp"
        android:text="Log in with Facebook"
        android:textAllCaps="false"
        android:textColor="#385185"
        android:textSize="17sp"
        android:onClick="facebook"/>

    <TextView
        android:id="@+id/forgotpwd"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:cursorVisible="false"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#385185"
        android:textSize="16sp" />

    <TextView
        android:layout_width="395dp"
        android:layout_height="109dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview_border"
        android:elevation="70dp"
        android:gravity="center"
        android:onClick="signUp"
        android:text="@string/dont_have_an_account_sign_up" />


</LinearLayout>